; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/health/extr_health.c_health_initialize_global_silencers.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/health/extr_health.c_health_initialize_global_silencers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32, i64 }

@silencers = common dso_local global %struct.TYPE_3__* null, align 8
@STYPE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @health_initialize_global_silencers() #0 {
  %1 = call %struct.TYPE_3__* @mallocz(i32 4)
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** @silencers, align 8
  %2 = load %struct.TYPE_3__*, %struct.TYPE_3__** @silencers, align 8
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 2
  store i64 0, i64* %3, align 8
  %4 = load i32, i32* @STYPE_NONE, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @silencers, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i32 %4, i32* %6, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** @silencers, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i32* null, i32** %8, align 8
  ret i32 0
}

declare dso_local %struct.TYPE_3__* @mallocz(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
